force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/Crear_Tarea_en_Candidato_Web_Duplicado__e.object-meta.xml
<CustomObject>
    <description>Platform event to trigger task duplicated message on webtoleads repeated</description>
    <label>Crear Tarea en Candidato Web Duplicado</label>
    <pluralLabel>Crear Tareas en Candidato Web Duplicado</pluralLabel>
</CustomObject>