force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <description>Activity Date asssociated with the task</description>
    <label>ActivityDate</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>