force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description  associated with its Task</description>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>