force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <description>Queue Associated with the owner</description>
    <label>OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>