force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status associated with the task</description>
    <label>Status</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>