force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Subject associated whit the task</description>
    <label>Subject</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>