force-app/main/default/objects/Crear_Tarea_en_Candidato_Web_Duplicado__e/fields/WhoId__c.field-meta.xml
<CustomField>
    <fullName>WhoId__c</fullName>
    <description>WhoId associated with the Task</description>
    <label>WhoId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>